[package]
name = "forte-talk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
axum-extra = { version = "0.8.0" }
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shuttle-secrets = "0.30.1"
shuttle-axum = "0.30.1"
shuttle-runtime = "0.30.1"
tokio = { version = "1.28.2", features = ["full"]}
tower-http = { version = "0.4.4", features = ["auth"] }
